# cpp-scripts

./: .gitignore  CMakeLists.txt  armadilloEx.cpp  helloWorld  main.cpp
.cache/clangd/index/: arrays1.cpp.873066BC4199F845.idx  arraysNvim.cpp.367BFEF3231EEA6D.idx  holaMundo.cpp.8984688DA40C65B2.idx
config/: cflags.cmake
include/: contigousMatrix.h  searchAlgorithms.h  sortAlgorithms.h  vecUtilities.h
src/: CMakeLists.txt  forloop.cpp  holaMundo.cpp  pointers  searchAlgorithms.cpp  vecUtilities.cpp
src/Algorithms/: CMakeLists.txt  searchTests.cpp  sortAlgorithms.cpp  sortTests.cpp
src/Arrays/: CMakeLists.txt  arrays1.cpp  arrays2.cpp  arrays3.cpp  arrays4.cpp  arrays5.cpp  arraysNvim.cpp  vecUtilities.cpp
src/Basics/: CMakeLists.txt  holaMundo.cpp  matrix.cpp  pointers.cpp  randomNumber.cpp  references.cpp  sumaGaus.cpp
src/C/: CMakeLists.txt  arrays2.c  arrays4.c  arrays5.c  holaMundo.c  holamundo.c  input.c  progTemp.c
src/C++/Arrays/: CMakeLists.txt
src/C++/Matrix/: CMakeLists.txt  armadillo1.cpp  matrix3.cpp
src/C/DataStructures/: CMakeLists.txt  arrays1.c  arrays3.c  arrays6.c
src/C/DataStructures/Arrays/: CMakeLists.txt  arrays6.c
src/C/DataStructures/matrix/: CMakeLists.txt  matrix1.c
src/DSA/: CMakeLists.txt
src/DSA/Arrays/: CMakeLists.txt  arrays1.cpp  arrays2.cpp  arrays3.cpp  arrays4.cpp
src/DSA/LinkedLists/: CMakeLists.txt  Linked1.cpp  Linked2.cpp
src/DSA/Matrix/: CMakeLists.txt  matrix1.cpp  matrix2.cpp
src/Geoutils/: CMakeLists.txt  lecturaShp.cpp
src/Matrix/: CMakeLists.txt  matrix1.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  matrix5.cpp  matrixUtilities.cpp
src/Pointers/: CMakeLists.txt  pointer3.cpp  pointer5.cpp  pointer6.cpp  pointer7.cpp  pointer8.cpp  pointer9.cpp
src/geoutils/: CMakeLists.txt  lecturaShp.cpp  try1.cpp
src/pointers/: CMakeLists.txt  pointer1.cpp  pointer2.cpp  pointer4.cpp
