include(${CMAKE_SOURCE_DIR}/config/cflags.cmake)

add_executable(pointer1 pointer1.cpp)
add_executable(pointer2 pointer2.cpp)
add_executable(pointer3 pointer3.cpp)
add_executable(pointer4 pointer4.cpp)
add_executable(pointer5 pointer5.cpp)
add_executable(pointer6 pointer6.cpp)
add_executable(pointer7 pointer7.cpp)
add_executable(pointer8 pointer8.cpp)
add_executable(pointer9 pointer9.cpp)